--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,9 @@ baseurl: "/"
 # Site settings
 title: Singapore Kairalee Kala Nilayam
 email: singaporekairaleekalanilayam@gmail.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Singapore Kairalee Kala Nilayam, Welcome To The Pioneer INDIAN ART HOUSE of Singapore"
 
+favicon: 'assets/images/favicon.ico'
 
 # Team names, titles and social links
 people:
