--- a/_config.yml
+++ b/_config.yml
@@ -10,38 +10,59 @@ favicon: 'assets/images/favicon.ico'
 
 # Team names, titles and social links
 people:
-- name: Kay Garland
-  pic: 1
-  position: Lead Designer
-  social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: stack-overflow
-      url: #
+#- name: Kay Garland
+#  pic: 1
+#  position: Lead Designer
+#  social:
+#    - title: twitter
+#      url: #
+#    - title: facebook
+#      url: #
+#    - title: stack-overflow
+#      url: #
 
-- name: Larry Parker
-  pic: 2
-  position: Lead Marketer
+- name: D Sudheeran
+  pic: 01_d.sudheeran
+  position: Advisor
   social:
-    - title: twitter
-      url: #
     - title: facebook
-      url: #
-    - title: linkedin
-      url: #
+      url: https://www.facebook.com/sudheeran
 
-- name: Diana Petersen
-  pic: 3
-  position: Lead Developer
+- name: G Rajeshkumar
+  pic: 02_G.Rajeshkumar
+  position: Advisor
   social:
-    - title: twitter
-      url: #
     - title: facebook
-      url: #
-    - title: google-plus
-      url: #
+      url: https://www.facebook.com/rajeshkumarking
+
+- name: Gangadharan Kunnon
+  pic: 03_Gangadharan
+  position: Advisor
+  social:
+    - title: facebook
+      url: https://www.facebook.com/gangadharan.kunnon
+
+- name: Basil Baby
+  pic: 04_basil
+  position: President
+  social:
+    - title: facebook
+      url: https://www.facebook.com/basilbabyy
+
+- name: Reshmi Pilla
+  pic: 05-Reshmi-pp
+  position: Hon. General Secretary
+  social:
+#    - title: facebook
+#      url: https://www.facebook.com/rajeshkumarking
+
+- name: Krishnalal
+  pic: 06-krishnalal
+  position: Hon. Treasure
+  social:
+    - title: facebook
+      url: https://www.facebook.com/krishnalal.pv.7
+
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
