--- a/_data/template.yml
+++ b/_data/template.yml
@@ -9,3 +9,5 @@ color:
 font:
   primary: 'Montserrat, "Helvetica Neue",Helvetica,Arial,sans-serif'
   secondary: '"Droid Serif", "Helvetica Neue", Helvetica,Arial,sans-serif'
+  malayalam: '"Manjari", "Helvetica Neue",Helvetica,Arial,sans-serif'
+
