--- a/_data/template.yml
+++ b/_data/template.yml
@@ -7,7 +7,7 @@ color:
 
 # Font Families
 font:
-  primary: 'Montserrat, "Helvetica Neue",Helvetica,Arial,sans-serif'
-  secondary: '"Droid Serif", "Helvetica Neue", Helvetica,Arial,sans-serif'
+  primary: '"Rubik", Montserrat, "Helvetica Neue",Helvetica,Arial,sans-serif'
+  secondary: '"Rubik", "Droid Serif", "Helvetica Neue", Helvetica,Arial,sans-serif'
   malayalam: '"Manjari", "Helvetica Neue",Helvetica,Arial,sans-serif'
 
