--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ people:
 
 - name: Gangadharan Kunnon
   pic: Gangadharan
-  position: Advisor
+  position: President
   social:
     - title: facebook
       url: https://www.facebook.com/gangadharan.kunnon
@@ -71,17 +71,15 @@ people:
 #    - title: facebook
 #      url: https://www.facebook.com/krishnalal.pv.7
 
-- name: Sheeba
-  pic: dummy-female
-  #Sheeba Stephen
+- name: Sheeba Stephen
+  pic: Sheeba-Stephen
   position: Artistic Director
   social:
 #    - title: facebook
 #      url: https://www.facebook.com/krishnalal.pv.7
 
 - name: Rajith Mohan
-  pic: dummy-male
-  #rajith-mohan
+  pic: rajith-mohan
   position: General Secretary
   social:
     # - title: facebook
@@ -135,6 +133,8 @@ people:
   pic: gineesh-madapparambath
   position: Exco Member
   social:
+    - title: linkedin
+      url: https://www.linkedin.com/in/gineesh/
 #    - title: facebook
 #      url: https://www.facebook.com/krishnalal.pv.7
 
