--- a/_config.yml
+++ b/_config.yml
@@ -209,42 +209,42 @@ people:
 
 - name: Rita Nanu
   pic: rita-nanu.png
-  position: Sub-Committee member
+  position: Sub-Committee Leader
   social:
    - title: facebook
      url: https://www.facebook.com/rita.nanu.3785 
 
 - name: Smitha Nair
   pic: smitha-nair.jpg
-  position: Sub-Committee member
+  position: Sub-Committee Leader
   social:
    - title: facebook
      url: https://www.facebook.com/profile.php?id=100089817672027
 
 - name: Srekanth Menon
   pic: sreekanth-menon.jpg
-  position: Sub-Committee member
+  position: Sub-Committee Leader
   social:
    - title: facebook
      url: https://www.facebook.com/sreekanth.menon.12
 
 - name: Sheeba Stephen
   pic: sheeba-stephen.jpg
-  position: Sub-Committee member
+  position: Sub-Committee Leader
   social:
    - title: facebook
      url: https://www.facebook.com/profile.php?id=100004044553113 
 
 - name: Sunitha Nair
   pic: sunitha-nair.jpg
-  position: Sub-Committee member
+  position: Sub-Committee Leader
   social:
    - title: facebook
      url: https://www.facebook.com/sunitha.nair.9693
 
 - name: Panayam Liju
   pic: panayam-liju.jpg
-  position: Sub-Committee member
+  position: Sub-Committee Leader
   social:
    - title: facebook
      url: https://www.facebook.com/panayamliju
