--- a/_config.yml
+++ b/_config.yml
@@ -150,7 +150,7 @@ people:
      url: https://www.facebook.com/sujith.kc
 
 - name: Balan Anil Kumar
-  pic: balan-anil-kumar.jpg
+  pic: balan-anilkumar.png
   position: Executive Committee member
   social:
     - title: facebook
@@ -164,7 +164,7 @@ people:
      url: https://www.facebook.com/vivek.viswanath.007
 
 - name: Naveen Chandran
-  pic: no-photo.png
+  pic: naveen-chandran.png
   position: Executive Committee member
   social:
    - title: facebook
@@ -194,7 +194,7 @@ people:
      url: https://www.facebook.com/goutygoutham 
 
 - name: Divya Balaji
-  pic: no-photo.png
+  pic: vidya-balaji.png
   position: Executive Committee member
   social:
    - title: facebook
