--- a/_config.yml
+++ b/_config.yml
@@ -194,7 +194,7 @@ people:
      url: https://www.facebook.com/goutygoutham 
 
 - name: Divya Balaji
-  pic: vidya-balaji.png
+  pic: divya-balaji.png
   position: Executive Committee member
   social:
    - title: facebook
